--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3.0",
         "barryvdh/laravel-snappy": "^0.4.8",
         "docopt/docopt": "~1.0",
         "fideloper/proxy": "^4.2",
@@ -16,21 +16,23 @@
         "guzzlehttp/guzzle": "^7.2",
         "h4cc/wkhtmltoimage-amd64": "^0.12.4",
         "h4cc/wkhtmltopdf-amd64": "^0.12.4",
-        "laravel/framework": "^7.0",
-        "laravel/passport": "^9.2",
+        "laravel/framework": "^8.0",
+        "laravel/legacy-factories": "^1.1",
+        "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
-        "laravolt/avatar": "^3.2",
+        "laravel/ui": "^3.0",
+        "laravolt/avatar": "^4.1.1",
         "spatie/laravel-image-optimizer": "^1.6",
         "spatie/laravel-permission": "^3.13",
         "wapmorgan/unified-archive": "^1.0",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -42,14 +44,11 @@
             "dont-discover": []
         }
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+    "autoload": { "psr-4": {
+        "App\\": "app/",
+        "Database\\Factories\\": "database/factories/",
+        "Database\\Seeders\\": "database/seeders/"
+    }
     },
     "autoload-dev": {
         "psr-4": {
