--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -45,7 +45,9 @@
                             "src/app/@theme/styles/styles.scss",
                             "node_modules/jsoneditor/dist/jsoneditor.min.css",
                             "./node_modules/ngx-lightbox/lightbox.css",
-                            "node_modules/material-design-icons/iconfont/material-icons.css"
+                            "node_modules/material-design-icons/iconfont/material-icons.css",
+                            "node_modules/sweetalert2/src/sweetalert2.scss"
+
                         ],
                         "scripts": [
                             "node_modules/pace-js/pace.min.js",
@@ -61,12 +63,10 @@
                     },
                     "configurations": {
                         "production": {
-                            "budgets": [
-                                {
-                                    "type": "anyComponentStyle",
-                                    "maximumWarning": "6kb"
-                                }
-                            ],
+                            "budgets": [{
+                                "type": "anyComponentStyle",
+                                "maximumWarning": "6kb"
+                            }],
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
@@ -75,8 +75,7 @@
                             "extractLicenses": true,
                             "vendorChunk": false,
                             "buildOptimizer": true,
-                            "fileReplacements": [
-                                {
+                            "fileReplacements": [{
                                     "replace": "src/environments/environment.ts",
                                     "with": "src/environments/environment.prod.ts"
                                 },
@@ -135,7 +134,8 @@
                             "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
                             "src/app/@theme/styles/styles.scss",
                             "node_modules/jsoneditor/dist/jsoneditor.min.css",
-                            "node_modules/material-design-icons/iconfont/material-icons.css"
+                            "node_modules/material-design-icons/iconfont/material-icons.css",
+                            "node_modules/sweetalert2/src/sweetalert2.scss"
 
                         ],
                         "assets": [
