--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "@ckeditor/ckeditor5-angular": "^2.0.1",
     "@ckeditor/ckeditor5-build-classic": "^23.1.0",
     "@nebular/auth": "^7.0.0",
+    "@nebular/date-fns": "^7.0.0",
     "@nebular/eva-icons": "^7.0.0",
     "@nebular/security": "^7.0.0",
     "@nebular/theme": "^7.0.0",
@@ -64,6 +65,7 @@
     "ckeditor": "4.12.1",
     "classlist.js": "1.1.20150312",
     "core-js": "^3.7.0",
+    "date-fns": "^2.19.0",
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
     "file-saver": "^2.0.2",
@@ -80,6 +82,7 @@
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.9",
     "ng2-completer": "^9.0.1",
+    "ng2-search-filter": "^0.5.1",
     "ng2-smart-table": "^1.7.2",
     "ngx-dropzone": "^2.2.2",
     "ngx-echarts": "^5.2.1",
