--- a/backend/composer.json
+++ b/backend/composer.json
@@ -18,10 +18,12 @@
         "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "laravel/framework": "^8.0",
         "laravel/legacy-factories": "^1.1",
-        "laravel/passport": "^10.0",
+        "laravel/passport": "^10",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "laravolt/avatar": "^4.1.1",
+        "lcobucci/jwt": "3.3.3",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-image-optimizer": "^1.6",
         "spatie/laravel-permission": "^3.13",
         "wapmorgan/unified-archive": "^1.0",
