--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,20 +32,20 @@
     "dependencies": {
         "@aesqe/mapboxgl-minimap": "^1.0.0",
         "@akveo/ng2-completer": "^9.0.1",
-        "@angular-devkit/schematics": "^11.2.3",
-        "@angular/animations": "^11.2.4",
-        "@angular/cdk": "^11.2.3",
-        "@angular/common": "^11.2.4",
-        "@angular/compiler": "^11.2.4",
-        "@angular/core": "^11.2.4",
+        "@angular-devkit/schematics": "^11.2.14",
+        "@angular/animations": "^11.2.14",
+        "@angular/cdk": "^11.2.13",
+        "@angular/common": "^11.2.14",
+        "@angular/compiler": "^11.2.14",
+        "@angular/core": "^11.2.14",
         "@angular/flex-layout": "^10.0.0-beta.32",
-        "@angular/forms": "^11.2.4",
-        "@angular/material": "^11.2.3",
-        "@angular/platform-browser": "^11.2.4",
-        "@angular/platform-browser-dynamic": "^11.2.4",
-        "@angular/router": "^11.2.4",
+        "@angular/forms": "^11.2.14",
+        "@angular/material": "^11.2.13",
+        "@angular/platform-browser": "^11.2.14",
+        "@angular/platform-browser-dynamic": "^11.2.14",
+        "@angular/router": "^11.2.14",
         "@asymmetrik/ngx-leaflet": "^3.1.0",
-        "@ckeditor/ckeditor5-angular": "^2.0.1",
+        "@ckeditor/ckeditor5-angular": "^2.0.2",
         "@ckeditor/ckeditor5-build-classic": "^23.1.0",
         "@nebular/auth": "^7.0.0",
         "@nebular/date-fns": "^7.0.0",
@@ -55,17 +55,17 @@
         "@sweetalert2/ngx-sweetalert2": "^8.1.1",
         "@swimlane/ngx-charts": "^16.0.0",
         "@turf/turf": "^5.1.6",
-        "@types/file-saver": "^2.0.1",
-        "@types/mapbox-gl": "^1.12.7",
-        "@watergis/mapbox-gl-legend": "^1.0.5",
+        "@types/file-saver": "^2.0.3",
+        "@types/mapbox-gl": "^1.13.2",
+        "@watergis/mapbox-gl-legend": "^1.1.6",
         "ang-jsoneditor": "^1.10.3",
         "angular2-chartjs": "0.5.1",
         "bootstrap": "^5.1.0",
         "chart.js": "^2.9.4",
         "ckeditor": "4.12.1",
         "classlist.js": "1.1.20150312",
-        "core-js": "^3.7.0",
-        "date-fns": "^2.19.0",
+        "core-js": "^3.16.1",
+        "date-fns": "^2.23.0",
         "echarts": "^4.9.0",
         "eva-icons": "^1.1.3",
         "file-saver": "^2.0.2",
@@ -75,12 +75,12 @@
         "jspdf": "^ 1.4.1",
         "leaflet": "^1.7.1",
         "lodash-es": "^4.17.15",
-        "lottie-web": "^5.7.4",
+        "lottie-web": "^5.7.13",
         "mapbox-gl": "^1.12.0",
         "mapbox.minimap": "^0.2.0",
         "material-design-icons": "^3.0.1",
         "nebular-icons": "1.1.0",
-        "ng2-ckeditor": "^1.2.9",
+        "ng2-ckeditor": "^1.3.4",
         "ng2-completer": "^9.0.1",
         "ng2-search-filter": "^0.5.1",
         "ng2-smart-table": "^1.7.2",
@@ -88,8 +88,8 @@
         "ngx-echarts": "^5.2.1",
         "ngx-filesaver": "^10.0.1",
         "ngx-gravatar": "^9.1.0",
-        "ngx-joyride": "^2.3.1",
-        "ngx-lightbox": "^2.2.2",
+        "ngx-joyride": "^2.4.0",
+        "ngx-lightbox": "^2.4.1",
         "ngx-lottie": "^6.4.0",
         "ngx-mapbox-gl": "^4.8.1",
         "node-sass": "^4.14.1",
@@ -101,42 +101,43 @@
         "socicon": "3.0.5",
         "style-loader": "^1.3.0",
         "sweetalert2": "^9.17.2",
+        "swiper": "^6.8.2",
         "tinymce": "^5.8.2",
-        "tslib": "^2.0.0",
+        "tslib": "^2.3.1",
         "typeface-exo": "0.0.61",
+        "typescript": "^4.1.3",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1102.3",
-        "@angular/cli": "^11.2.3",
-        "@angular/compiler-cli": "^11.2.4",
+        "@angular-devkit/build-angular": "^0.1102.14",
+        "@angular/cli": "^11.2.14",
+        "@angular/compiler-cli": "^11.2.14",
         "@angular/language-service": "11.2.4",
         "@compodoc/compodoc": "^1.1.14",
-        "@fortawesome/fontawesome-free": "^5.15.1",
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@types/d3-color": "1.2.2",
-        "@types/jasmine": "~3.6.0",
+        "@types/jasmine": "^3.8.2",
         "@types/jasminewd2": "2.0.8",
-        "@types/node": "^14.14.8",
-        "codelyzer": "^6.0.0",
+        "@types/node": "^14.17.9",
+        "codelyzer": "^6.0.2",
         "conventional-changelog-cli": "^2.1.1",
         "husky": "4.2.5",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~6.1.1",
+        "karma": "^6.3.4",
         "karma-chrome-launcher": "~3.1.0",
         "karma-cli": "2.0.0",
         "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
+        "karma-jasmine-html-reporter": "^1.7.0",
         "npm-run-all": "4.1.5",
         "protractor": "~7.0.0",
         "rimraf": "3.0.2",
-        "stylelint": "^13.8.0",
+        "stylelint": "^13.13.1",
         "ts-node": "8.10.2",
         "tslint": "~6.1.0",
-        "tslint-language-service": "^0.9.9",
-        "typescript": "^4.3.5"
+        "tslint-language-service": "^0.9.9"
     },
     "resolutions": {
         "chokidar": "^3.4.0",
