--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,6 @@
         "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points"
     },
     "dependencies": {
-        "@aesqe/mapboxgl-minimap": "^1.0.0",
         "@akveo/ng2-completer": "^9.0.1",
         "@angular-devkit/schematics": "^11.2.14",
         "@angular/animations": "^11.2.14",
@@ -38,15 +37,13 @@
         "@angular/common": "^11.2.14",
         "@angular/compiler": "^11.2.14",
         "@angular/core": "^11.2.14",
-        "@angular/flex-layout": "^10.0.0-beta.32",
         "@angular/forms": "^11.2.14",
         "@angular/material": "^11.2.13",
         "@angular/platform-browser": "^11.2.14",
         "@angular/platform-browser-dynamic": "^11.2.14",
         "@angular/router": "^11.2.14",
         "@asymmetrik/ngx-leaflet": "^3.1.0",
-        "@ckeditor/ckeditor5-angular": "^2.0.2",
-        "@ckeditor/ckeditor5-build-classic": "^23.1.0",
+        "@babel/core": "^7.13.0",
         "@nebular/auth": "^7.0.0",
         "@nebular/date-fns": "^7.0.0",
         "@nebular/eva-icons": "^7.0.0",
@@ -54,15 +51,10 @@
         "@nebular/theme": "^7.0.0",
         "@sweetalert2/ngx-sweetalert2": "^8.1.1",
         "@swimlane/ngx-charts": "^16.0.0",
-        "@turf/turf": "^5.1.6",
         "@types/file-saver": "^2.0.3",
-        "@types/mapbox-gl": "^1.13.2",
-        "@watergis/mapbox-gl-legend": "^1.1.6",
-        "ang-jsoneditor": "^1.10.3",
         "angular2-chartjs": "0.5.1",
         "bootstrap": "^5.1.0",
         "chart.js": "^2.9.4",
-        "ckeditor": "4.12.1",
         "classlist.js": "1.1.20150312",
         "core-js": "^3.16.1",
         "date-fns": "^2.23.0",
@@ -71,19 +63,12 @@
         "file-saver": "^2.0.2",
         "intl": "1.2.5",
         "ionicons": "^2.0.1",
-        "jsoneditor": "^7.5.0",
         "jspdf": "^ 1.4.1",
         "leaflet": "^1.7.1",
         "lodash-es": "^4.17.15",
         "lottie-web": "^5.7.13",
-        "mapbox-gl": "^1.12.0",
-        "mapbox.minimap": "^0.2.0",
         "material-design-icons": "^3.0.1",
         "nebular-icons": "1.1.0",
-        "ng2-ckeditor": "^1.3.4",
-        "ng2-completer": "^9.0.1",
-        "ng2-search-filter": "^0.5.1",
-        "ng2-smart-table": "^1.7.2",
         "ngx-dropzone": "^2.2.2",
         "ngx-echarts": "^5.2.1",
         "ngx-filesaver": "^10.0.1",
@@ -91,8 +76,6 @@
         "ngx-joyride": "^2.4.0",
         "ngx-lightbox": "^2.4.1",
         "ngx-lottie": "^6.4.0",
-        "ngx-mapbox-gl": "^4.8.1",
-        "node-sass": "^4.14.1",
         "normalize.css": "8.0.1",
         "pace-js": "1.0.2",
         "roboto-fontface": "0.10.0",
