--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
         "conventional-changelog": "conventional-changelog",
         "start": "ng serve",
         "build": "ng build",
-        "build:prod": "npm run build -- --prod --aot",
+        "build:prod": "npm run build -- --configuration production --aot",
         "test": "ng test",
         "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
         "lint": "ng lint",
@@ -27,103 +27,103 @@
         "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
         "prepush": "npm run lint:ci",
         "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-        "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points"
+        "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\""
     },
     "dependencies": {
         "@akveo/ng2-completer": "^9.0.1",
-        "@angular-devkit/schematics": "^11.2.14",
-        "@angular/animations": "^11.2.14",
-        "@angular/cdk": "^11.2.13",
-        "@angular/common": "^11.2.14",
-        "@angular/compiler": "^11.2.14",
-        "@angular/core": "^11.2.14",
-        "@angular/forms": "^11.2.14",
-        "@angular/material": "^11.2.13",
-        "@angular/platform-browser": "^11.2.14",
-        "@angular/platform-browser-dynamic": "^11.2.14",
-        "@angular/router": "^11.2.14",
-        "@asymmetrik/ngx-leaflet": "^3.1.0",
-        "@babel/core": "^7.13.0",
-        "@nebular/auth": "^7.0.0",
-        "@nebular/date-fns": "^7.0.0",
-        "@nebular/eva-icons": "^7.0.0",
-        "@nebular/security": "^7.0.0",
-        "@nebular/theme": "^7.0.0",
-        "@sweetalert2/ngx-sweetalert2": "^8.1.1",
-        "@swimlane/ngx-charts": "^16.0.0",
-        "@types/file-saver": "^2.0.3",
-        "angular2-chartjs": "0.5.1",
-        "bootstrap": "^5.1.0",
-        "chart.js": "^2.9.4",
+        "@angular/animations": "^12.1.0",
+        "@angular/cdk": "12.1.0",
+        "@angular/common": "^12.1.0",
+        "@angular/compiler": "^12.1.0",
+        "@angular/core": "^12.1.0",
+        "@angular/forms": "^12.1.0",
+        "@angular/google-maps": "^12.1.0",
+        "@angular/platform-browser": "^12.1.0",
+        "@angular/platform-browser-dynamic": "^12.1.0",
+        "@angular/router": "^12.1.0",
+        "@asymmetrik/ngx-leaflet": "3.0.1",
+        "@nebular/auth": "8.0.0",
+        "@nebular/eva-icons": "8.0.0",
+        "@nebular/security": "8.0.0",
+        "@nebular/theme": "8.0.0",
+        "@swimlane/ngx-charts": "^14.0.0",
+        "angular2-chartjs": "0.4.1",
+        "bootstrap": "4.3.1",
+        "chart.js": "2.7.1",
+        "ckeditor": "4.7.3",
         "classlist.js": "1.1.20150312",
-        "core-js": "^3.16.1",
-        "date-fns": "^2.23.0",
-        "echarts": "^4.9.0",
+        "core-js": "2.5.1",
+        "echarts": "^4.0.2",
         "eva-icons": "^1.1.3",
-        "file-saver": "^2.0.2",
         "intl": "1.2.5",
-        "ionicons": "^2.0.1",
+        "ionicons": "2.0.1",
+        "leaflet": "1.2.0",
+        "nebular-icons": "1.1.0",
+        "ng2-ckeditor": "^1.2.9",
+        "ng2-smart-table": "^1.6.0",
+        "ngx-echarts": "^4.2.2",
+        "node-sass": "^4.12.0",
+        "normalize.css": "6.0.0",
+        "pace-js": "1.0.2",
+        "roboto-fontface": "0.8.0",
+        "rxjs": "6.6.2",
+        "rxjs-compat": "6.3.0",
+        "socicon": "3.0.5",
+        "style-loader": "^1.1.3",
+        "tinymce": "4.5.7",
+        "tslib": "^2.1.0",
+        "typeface-exo": "0.0.22",
+        "web-animations-js": "^2.3.2",
+        "zone.js": "~0.11.4",
+        "@angular-devkit/schematics": "^11.2.14",
+        "@angular/material": "^11.2.13",
+        "@nebular/date-fns": "^7.0.0",
+        "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+        "@types/file-saver": "^2.0.3",
+        "date-fns": "^2.23.0",
+        "file-saver": "^2.0.2",
         "jspdf": "^ 1.4.1",
-        "leaflet": "^1.7.1",
         "lodash-es": "^4.17.15",
         "lottie-web": "^5.7.13",
         "material-design-icons": "^3.0.1",
-        "nebular-icons": "1.1.0",
         "ngx-dropzone": "^2.2.2",
-        "ngx-echarts": "^5.2.1",
         "ngx-filesaver": "^10.0.1",
         "ngx-gravatar": "^9.1.0",
         "ngx-joyride": "^2.4.0",
-        "ngx-lightbox": "^2.4.1",
         "ngx-lottie": "^6.4.0",
-        "normalize.css": "8.0.1",
-        "pace-js": "1.0.2",
-        "roboto-fontface": "0.10.0",
-        "rxjs": "6.6.6",
-        "rxjs-compat": "6.6.2",
-        "socicon": "3.0.5",
-        "style-loader": "^1.3.0",
         "sweetalert2": "^9.17.2",
-        "swiper": "^6.8.2",
-        "tinymce": "^5.8.2",
-        "tslib": "^2.3.1",
-        "typeface-exo": "0.0.61",
-        "typescript": "^4.3.5",
-        "web-animations-js": "^2.3.2",
-        "zone.js": "~0.10.2"
+        "swiper": "^6.8.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1102.14",
-        "@angular/cli": "^11.2.14",
-        "@angular/compiler-cli": "^11.2.14",
-        "@angular/language-service": "11.2.4",
+        "@angular-devkit/build-angular": "~12.1.0",
+        "@angular/cli": "^12.1.0",
+        "@angular/compiler-cli": "^12.1.0",
+        "@angular/language-service": "12.1.0",
         "@compodoc/compodoc": "^1.1.14",
-        "@fortawesome/fontawesome-free": "^5.15.4",
-        "@types/d3-color": "1.2.2",
-        "@types/jasmine": "^3.8.2",
-        "@types/jasminewd2": "2.0.8",
-        "@types/node": "^14.17.9",
-        "codelyzer": "^6.0.2",
-        "conventional-changelog-cli": "^2.1.1",
-        "husky": "4.2.5",
+        "@fortawesome/fontawesome-free": "^5.2.0",
+        "@types/d3-color": "1.0.5",
+        "@types/jasmine": "^3.3.0",
+        "@types/jasminewd2": "2.0.3",
+        "@types/leaflet": "1.2.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "conventional-changelog-cli": "1.3.4",
+        "husky": "0.13.3",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
-        "karma": "^6.3.4",
+        "karma": "~6.3.4",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-cli": "2.0.0",
+        "karma-cli": "1.0.1",
         "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.7.0",
-        "npm-run-all": "4.1.5",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "npm-run-all": "4.0.2",
         "protractor": "~7.0.0",
-        "rimraf": "3.0.2",
-        "stylelint": "^13.13.1",
-        "ts-node": "8.10.2",
+        "rimraf": "2.6.1",
+        "stylelint": "7.13.0",
+        "ts-node": "3.2.2",
         "tslint": "~6.1.0",
-        "tslint-language-service": "^0.9.9"
-    },
-    "resolutions": {
-        "chokidar": "^3.4.0",
-        "object-path": "^0.11.5"
+        "tslint-language-service": "^0.9.9",
+        "typescript": "^4.2.3"
     }
 }
