--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -53,14 +53,27 @@
                         "scripts": [
                             "node_modules/pace-js/pace.min.js",
                             "node_modules/tinymce/tinymce.min.js",
-                            "node_modules/tinymce/themes/silver/theme.min.js",
+                            "node_modules/tinymce/themes/modern/theme.min.js",
                             "node_modules/tinymce/plugins/link/plugin.min.js",
                             "node_modules/tinymce/plugins/paste/plugin.min.js",
                             "node_modules/tinymce/plugins/table/plugin.min.js",
                             "node_modules/echarts/dist/echarts.min.js",
                             "node_modules/echarts/dist/extension/bmap.min.js",
                             "node_modules/chart.js/dist/Chart.min.js"
-                        ]
+                        ],
+                        "allowedCommonJsDependencies": [
+                            "angular2-chartjs",
+                            "echarts",
+                            "lodash",
+                            "zrender/lib/svg/svg",
+                            "zrender/lib/vml/vml"
+                        ],
+                        "vendorChunk": true,
+                        "extractLicenses": false,
+                        "buildOptimizer": false,
+                        "sourceMap": true,
+                        "optimization": false,
+                        "namedChunks": true
                     },
                     "configurations": {
                         "production": {
