--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,68 +31,73 @@
     },
     "dependencies": {
         "@akveo/ng2-completer": "^9.0.1",
-        "@angular/animations": "^12.1.0",
-        "@angular/cdk": "12.1.0",
+        "@angular-devkit/schematics": "^11.2.14",
+        "@angular/animations": "^12.2.1",
+        "@angular/cdk": "^12.1.0",
         "@angular/common": "^12.1.0",
         "@angular/compiler": "^12.1.0",
         "@angular/core": "^12.1.0",
         "@angular/forms": "^12.1.0",
         "@angular/google-maps": "^12.1.0",
+        "@angular/material": "^11.2.13",
         "@angular/platform-browser": "^12.1.0",
         "@angular/platform-browser-dynamic": "^12.1.0",
         "@angular/router": "^12.1.0",
         "@asymmetrik/ngx-leaflet": "3.0.1",
         "@nebular/auth": "8.0.0",
+        "@nebular/date-fns": "^7.0.0",
         "@nebular/eva-icons": "8.0.0",
         "@nebular/security": "8.0.0",
         "@nebular/theme": "8.0.0",
+        "@sweetalert2/ngx-sweetalert2": "^8.1.1",
         "@swimlane/ngx-charts": "^14.0.0",
+        "@types/file-saver": "^2.0.3",
         "angular2-chartjs": "0.4.1",
         "bootstrap": "4.3.1",
         "chart.js": "2.7.1",
         "ckeditor": "4.7.3",
         "classlist.js": "1.1.20150312",
         "core-js": "2.5.1",
+        "date-fns": "^2.23.0",
         "echarts": "^4.0.2",
         "eva-icons": "^1.1.3",
+        "file-saver": "^2.0.2",
+        "i": "^0.3.6",
         "intl": "1.2.5",
         "ionicons": "2.0.1",
+        "jspdf": "^ 1.4.1",
         "leaflet": "1.2.0",
+        "lodash-es": "^4.17.15",
+        "lottie-web": "^5.7.13",
+        "material-design-icons": "^3.0.1",
         "nebular-icons": "1.1.0",
         "ng2-ckeditor": "^1.2.9",
+        "ng2-completer": "^9.0.1",
+        "ng2-search-filter": "^0.5.1",
         "ng2-smart-table": "^1.6.0",
+        "ngx-dropzone": "^2.2.2",
         "ngx-echarts": "^4.2.2",
+        "ngx-filesaver": "^10.0.1",
+        "ngx-gravatar": "^9.1.0",
+        "ngx-joyride": "^2.4.0",
+        "ngx-lightbox": "^2.4.1",
+        "ngx-lottie": "^6.4.0",
         "node-sass": "^4.12.0",
         "normalize.css": "6.0.0",
+        "npm": "^7.20.6",
         "pace-js": "1.0.2",
         "roboto-fontface": "0.8.0",
         "rxjs": "6.6.2",
-        "rxjs-compat": "6.3.0",
+        "rxjs-compat": "^6.3.0",
         "socicon": "3.0.5",
         "style-loader": "^1.1.3",
+        "sweetalert2": "^9.17.2",
+        "swiper": "^6.8.2",
         "tinymce": "4.5.7",
         "tslib": "^2.1.0",
         "typeface-exo": "0.0.22",
         "web-animations-js": "^2.3.2",
-        "zone.js": "~0.11.4",
-        "@angular-devkit/schematics": "^11.2.14",
-        "@angular/material": "^11.2.13",
-        "@nebular/date-fns": "^7.0.0",
-        "@sweetalert2/ngx-sweetalert2": "^8.1.1",
-        "@types/file-saver": "^2.0.3",
-        "date-fns": "^2.23.0",
-        "file-saver": "^2.0.2",
-        "jspdf": "^ 1.4.1",
-        "lodash-es": "^4.17.15",
-        "lottie-web": "^5.7.13",
-        "material-design-icons": "^3.0.1",
-        "ngx-dropzone": "^2.2.2",
-        "ngx-filesaver": "^10.0.1",
-        "ngx-gravatar": "^9.1.0",
-        "ngx-joyride": "^2.4.0",
-        "ngx-lottie": "^6.4.0",
-        "sweetalert2": "^9.17.2",
-        "swiper": "^6.8.2"
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~12.1.0",
@@ -102,8 +107,7 @@
         "@compodoc/compodoc": "^1.1.14",
         "@fortawesome/fontawesome-free": "^5.2.0",
         "@types/d3-color": "1.0.5",
-        "@types/jasmine": "^3.3.0",
-        "@types/jasminewd2": "2.0.3",
+        "@types/jasminewd2": "^2.0.10",
         "@types/leaflet": "1.2.3",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
